@@ -3,7 +3,6 @@
   (C) Copyright Paul Gardner-Stephen 1996, All rights reserved 
   */
 
-#define uchar unsigned char
-
-int firsthighbit(uchar foo);
+int firsthighbit (unsigned char foo);
 int fatal_error (unsigned char *message);
+void asciitopetscii (unsigned char *message);
