@@ -5,7 +5,7 @@
  */
 
 #define VER_MAJ 0
-#define VER_MIN 5
+#define VER_MIN 8
 
 #include <stdio.h>
 
